--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,5 +7,5 @@ jobs:
       - run:
           name: Testando imagem docker
           command:
-            echo "Hello World"
+            curl -i http://172.0.0.1:8000/healthcheck
            
