--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
       - image: golang:1.19.0-bullseye
     steps:
       - run:
-          name: Criando diretorio
+          name: Clone Repo
           command: | 
             mkdir /go-ninja
             git clone https://github.com/vasppipoka/devops_test /go-ninja
@@ -19,6 +19,19 @@ jobs:
             go build -o main .
             ./main &
             curl -i http://127.0.0.1:8000/healthcheck
-
+  test:
+    docker:
+      - image: golang:1.19.0-bullseye
+    steps:
+      - checkout 
+      -run: 
+          name: Testing Code
+          command: |
+            go test ./... -v 
+workflows:
+  build_and_test
+    jobs:
+      - build
+      - test
             
            
