--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,5 +29,10 @@ jobs:
           command: |
             go test ./... -v 
 
+workflows:
+  build_and_test:
+    jobs:
+      - build
+      - test
             
            
